--- a/static/base.css
+++ b/static/base.css
@@ -41,7 +41,7 @@ body {
   }
   
   @media screen and (max-width: 600px) {
-    .top a:not(:first-child,:nth-child(2)) {display: none;}
+    .top a:not(:nth-child(2)) {display: none;}
     .top a.icon {
       float: right;
       display: block;
@@ -115,6 +115,7 @@ body {
   .copyright{
     float: none;
     margin-top: .3rem;
+    font-size: 0.8rem;
   }
   .footer{
     display: flex;
@@ -122,4 +123,10 @@ body {
     align-items: center;
   }
 
+  .fa:not(.fa-bars) {
+    padding: 3px;
+    margin: 1.5px 3px;
+    font-size: 1.3rem;
+    width: 1.5rem;
+  }
 }
