--- a/views/contact.pug
+++ b/views/contact.pug
@@ -11,3 +11,35 @@ block style
         include ../static/contact.css
 
 block content
+    section 
+        div.container 
+            <div class="contactinfo">
+                    <div>
+                        <h2>Contact Info</h2>
+                        <ul class="info">
+                            <li>
+                                <span><img src="static/photo/location.png"></span>
+                                <span>Banshgopal <br> Puraini, Madhepura <br>852116</span>
+                            </li>
+                            <li>
+                                <span><img src="static/photo/mail.png"></span>
+                                <span>ak14502@gmail.com</span>
+                            </li>
+                            <li>
+                                <span><img src="static/photo/call.png"></span>
+                                <span>+91 6205080072</span>
+                            </li>
+                            <li>
+                                <span><img src="static/photo/wa.png"></span>
+                                <span>+91 6205080072</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="sci">
+                        <li><a href="https://www.instagram.com/abhinav_5147/"><img src="static/photo/1.png"></a></li>
+                        <li><a href=""><img src="static/photo/2.png"></a></li>
+                        <li><a href=""><img src="static/photo/3.png"></a></li>
+                        <li><a href="https://www.facebook.com/avk5147"><img src="static/photo/4.png"></a></li>
+                        <li><a href="https://github.com/abhi5147"><img src="static/photo/5.png"></a></li>
+                    </ul>
+            </div>
