--- a/views/contact.pug
+++ b/views/contact.pug
@@ -39,7 +39,7 @@ block content
                         <li><a href="https://www.instagram.com/abhinav_5147/"><img src="static/photo/1.png"></a></li>
                         <li><a href=""><img src="static/photo/2.png"></a></li>
                         <li><a href=""><img src="static/photo/3.png"></a></li>
-                        <li><a href="https://www.facebook.com/avk5147"><img src="static/photo/4.png"></a></li>
+                        <li><a href="https://www.facebook.com/avk5147/"><img src="static/photo/4.png"></a></li>
                         <li><a href="https://github.com/abhi5147"><img src="static/photo/5.png"></a></li>
                     </ul>
             </div>
